fixed button alignment on [tablet]landing.html

--- a/perma_web/static/css/style-responsive.scss
+++ b/perma_web/static/css/style-responsive.scss
@@ -2948,6 +2948,10 @@ p.display {
     margin-bottom: 1em;
     padding: 0;
 	@include respond-tablet {
+	    font-size: 16px;
+	    margin-bottom: $double;
+	}
+	@include respond-desktop {
 	    font-size: 20px;
 	    margin-bottom: $grid * 4;
 	}
@@ -4763,6 +4767,15 @@ a.orange:hover, .orange:active {
 		max-height: 27em;
 		padding-top: 0;
 		margin-top: 0;
+	}
+}
+
+div.buttons {
+	margin-left: -$grid;
+	margin-right: -$grid;
+	.btn {
+		margin-right: $grid;
+		margin-left: $grid;
 	}
 }
 
